--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,3 +84,35 @@
     bottom: 80px;
   }
 }
+
+/* Footer Component */
+
+footer {
+  display: flex;
+  justify-content: center !important;
+  background: #111;
+  height: auto;
+  height: 30vh;
+  margin-top: 20px;
+  padding-top: 30px;
+  color: #fff;
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+#contact {
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.contactUl {
+  list-style: none;
+}
+
+li {
+  border: 1px solid white;
+  border-radius: 50%;
+  padding: 5px;
+  width: 40px;
+
+}
